--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -50,11 +50,14 @@ security:
             guard:
                 authenticators:
                 - App\Security\LoginPostAuthenticator
+        #main:
+            #anonymous: ~      
     access_control:
     - { path: ^/admin/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/admin/logout$, role: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/admin/, role: [ROLE_ADMIN, ROLE_SONATA_ADMIN] }
     - { path: ^/post/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/post/logout$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/post/fogot-pasword$, role: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/post/, role: [ROLE_POST_USER,ROLE_ADMIN] }
     - { path: ^/.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
