--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,3 +21,9 @@ services:
         arguments: [~, App\Entity\User, ~]
         tags:
         - { name: sonata.admin, manager_type: orm, group: admin, label: Users }
+        
+    email_service:
+        class: App\Service\SendMailService
+        calls:
+            - [setMailer, ["@mailer"]]
+            - [setTemplateEngine, ["@templating"]]
