--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "knplabs/knp-paginator-bundle": "^3.0",
+        "ninsuo/symfony-collection": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "^3.37",
         "sonata-project/doctrine-orm-admin-bundle": "^3.6",
