--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,6 +29,12 @@ services:
         tags:
         - { name: sonata.admin, manager_type: orm, group: admin, label: OrderStatus }
 
+    app.admin.addresses:
+        class: App\Admin\AddressesAdmin
+        arguments: [~, App\Entity\Address, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: admin, label: Addresses }
+
     email_service:
         class: App\Service\SendMailService
         calls:
