--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,6 +23,12 @@ services:
         tags:
         - { name: sonata.admin, manager_type: orm, group: admin, label: Users }
 
+    app.admin.orders:
+        class: App\Admin\OrdersAdmin
+        arguments: [~, App\Entity\Order, ~]
+        tags:
+        - { name: sonata.admin, manager_type: orm, group: admin, label: Orders }
+
     app.admin.orderstatus:
         class: App\Admin\OrderStatusAdmin
         arguments: [~, App\Entity\OrderStatus, ~]
