--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "jms/i18n-routing-bundle": "^3.0",
         "knplabs/knp-paginator-bundle": "^3.0",
         "ninsuo/symfony-collection": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
