--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,6 +1,11 @@
 framework:
-    default_locale: '%locale%'
+    default_locale: "%locale%"
     translator:
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
-            - '%locale%'
+            - "%locale%"
+
+jms_i18n_routing:
+    default_locale: ua
+    locales: [ua, ru]
+    strategy: prefix_except_default
