--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 ###> symfony/framework-bundle ###
 /.env
+/.idea
+/.idea/workspace.xml
 /public/bundles/
 /var/
 /vendor/
@@ -9,6 +11,7 @@
 ###> symfony/phpunit-bridge ###
 .phpunit
 /phpunit.xml
+
 ###< symfony/phpunit-bridge ###
 
 ###> symfony/web-server-bundle ###
