--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "ext-iconv": "*",
         "jms/i18n-routing-bundle": "^3.0",
         "knplabs/knp-paginator-bundle": "^3.0",
+        "knpuniversity/oauth2-client-bundle": "^1.28",
+        "league/oauth2-facebook": "^2.0",
         "ninsuo/symfony-collection": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "^3.37",
