--- a/config/packages/sonata_admin.yaml
+++ b/config/packages/sonata_admin.yaml
@@ -1,10 +1,11 @@
 sonata_admin:
-    title: 'Sonata Admin'
+    title: 'System.expressposhta.admin'
     dashboard:
         blocks:
             - { type: sonata.admin.block.admin_list, position: left }
     templates:
         layout: 'standard_layout.html.twig'
+
 
 sonata_block:
     blocks:
