--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,11 +27,11 @@ services:
         arguments: [~, App\Entity\Order, ~]
         tags:
         - { name: sonata.admin, manager_type: orm, group: Admin, label: Orders }
-    app.admin.orders2:
-        class: App\Admin\Orders2Admin
-        arguments: [~, App\Entity\Order, ~]
-        tags:
-            - { name: sonata.admin, manager_type: orm, group: Admin, label: OrdersPraid }
+#    app.admin.ordersewr2:
+#        class: App\Admin\Orders2Admin
+#        arguments: [~, App\Entity\Test, ~]
+#        tags:
+#            - { name: sonata.admin, manager_type: orm, group: Price, label: OrdersPraid }
 
     app.admin.orderstatus:
         class: App\Admin\OrderStatusAdmin
@@ -103,8 +103,9 @@ services:
             - [setMailer, ["@mailer"]]
             - [setTemplateEngine, ["@templating"]]
 
-
-
-
-
-
+    admin.test:
+        class: App\Admin\TestAdmin
+        arguments: [~, App\Entity\Order, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: admin, label: Test }
+        public: true
