--- a/config/services.yaml
+++ b/config/services.yaml
@@ -107,5 +107,5 @@ services:
         class: App\Admin\TestAdmin
         arguments: [~, App\Entity\Order, ~]
         tags:
-            - { name: sonata.admin, manager_type: orm, group: admin, label: Test }
+            - { name: sonata.admin, manager_type: orm, group: Admin, label: OrdersPraid }
         public: true
