--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,12 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "google/apiclient": "^2.4",
         "jms/i18n-routing-bundle": "^3.0",
         "knplabs/knp-paginator-bundle": "^3.0",
         "knpuniversity/oauth2-client-bundle": "^1.28",
         "league/oauth2-facebook": "^2.0",
+        "nesbot/carbon": "^2.24",
         "ninsuo/symfony-collection": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "^3.37",
