--- a/config/packages/sonata_admin.yaml
+++ b/config/packages/sonata_admin.yaml
@@ -35,6 +35,7 @@ sonata_admin:
                     - admin.price_weight_ekspresss
                     - admin.price_weight_econom_vip
                     - admin.price_weight_econom
+                    - admin.pricefortype
 
     templates:
         layout: 'standard_layout.html.twig'
