--- a/config/services.yaml
+++ b/config/services.yaml
@@ -105,3 +105,10 @@ services:
         tags:
             - { name: sonata.admin, manager_type: orm, group: Admin, label: OrdersPraid }
         public: true
+
+    admin.pricefortype:
+        class: App\Admin\PriceForDeliveryTypeAdmin
+        arguments: [~, App\Entity\PriceForDeliveryType, ~]
+        tags:
+        - { name: sonata.admin, manager_type: orm, group: Admin, label: PriceForType }
+        public: true
