--- a/config/packages/sonata_admin.yaml
+++ b/config/packages/sonata_admin.yaml
@@ -25,6 +25,7 @@ sonata_admin:
                     - app.admin.orderstatus
                     - admin.order_type
                     - app.admin.deliveryprice
+                    - admin.settings
             app.admin.group.price:
                 keep_open:       true
                 label:           Ціни
