--- a/config/packages/sonata_admin.yaml
+++ b/config/packages/sonata_admin.yaml
@@ -16,6 +16,7 @@ sonata_admin:
                     - app.admin.invoices
                     - app.admin.user
                     - app.admin.addresses
+                    - admin.coupon
             app.admin.group.order:
                 keep_open:       true
                 label:           Налаштування
