--- a/config/services.yaml
+++ b/config/services.yaml
@@ -86,11 +86,11 @@ services:
         - { name: sonata.admin, manager_type: orm, group: Admin, label: PriceForType }
         public: true
 
-    admin.settings:
-            class: App\Admin\SettingsAdmin
-            arguments: [~, App\Entity\Settings, ~]
+    admin.expressDeliveryPrice:
+            class: App\Admin\ExpressDeliveryPriceAdmin
+            arguments: [~, App\Entity\ExpressDeliveryPrice, ~]
             tags:
-            - { name: sonata.admin, manager_type: orm, group: Admin, label: SettingsAdmin }
+            - { name: sonata.admin, manager_type: orm, group: Admin, label: SettingsExpressPriceAdmin }
             public: true
 
     admin.coupon:
