--- a/config/packages/sonata_admin.yaml
+++ b/config/packages/sonata_admin.yaml
@@ -26,6 +26,7 @@ sonata_admin:
                     - app.admin.orderstatus
                     - admin.order_type
                     - app.admin.deliveryprice
+                    - admin.helpstexts
             app.admin.group.price:
                 keep_open:       true
                 label:           Ціни
