--- a/config/services.yaml
+++ b/config/services.yaml
@@ -99,3 +99,10 @@ services:
         tags:
             - { name: sonata.admin, manager_type: orm, group: admin, label: Coupon }
         public: true
+
+    admin.helpstexts:
+        class: App\Admin\FormHelpsAdmin
+        arguments: [~, App\Entity\FormHelps,~]
+        tags:
+        - { name: sonata.admin, manager_type: orm, group: admin, label: helpstexts }
+        public: true
